# gratOS

./: .gitignore  Cargo.toml  Makefile  README.md  limine.conf  renovate.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  conventional-commit.yaml  nightly-release.yaml  release.yaml  renovate-config-validator.yaml
arch/x86/: link.ld  start.s  target.json
boot/: grub-multiboot2.cfg  limine-multiboot2.conf
grub/: grub.cfg
iso/boot/grub/: grub.cfg
src/: ascii_art.rs  gdt.rs  idt.rs  interrupts.rs  interrupts.s  io.rs  lib.rs  main.rs  multiboot.s  multiboot2.s  mutex.rs  print_kernel_stack.rs  ps2.rs  start.s  string.rs  sys_io.rs  us_qwerty.rs  vga_buffer.rs
src/bootprotocol/: mod.rs  multiboot.rs  multiboot2.rs
src/commands/: halt.rs  mod.rs  print_gdt.rs  shutdown.rs
src/driver/: mod.rs  pic.rs
src/driver/console/: history.rs  mod.rs
src/driver/keyboard/: fifo_buffer.rs  mod.rs  ps2.rs
src/driver/keyboard/keymaps/: fr_azerty.rs  mod.rs  us_qwerty.rs
src/driver/shell/: debug.rs  halt.rs  hello.rs  hexdump.rs  mod.rs  print_gdt.rs  print_kernel_stack.rs  reboot.rs  shutdown.rs
src/driver/tty/: history.rs  mod.rs
src/driver/vga/: history_buffer.rs  mod.rs  text_mode.rs
src/memory/: allocator.rs  bitmap.rs  heap.rs  mod.rs  paging.rs
src/power/: clean_registers.rs  halt.rs  mod.rs  reboot.rs  shutdown.rs
