[package]
name = "gratos"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "gratos"
path = "src/main.rs"
test = false
bench = false

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
