[package]
name = "gratos"
version = "0.2.12"
edition = "2024"
description = "kernel from scratch"
repository = "https://github.com/alisterd51/gratOS"
readme = "README.md"
license = "GPL-3.0"
keywords = ["kernel"]
categories = ["embedded"]

[[bin]]
name = "gratos"
path = "src/main.rs"
test = false
bench = false

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
